--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -247,7 +247,8 @@ p {
     &:hover {
       cursor: pointer; } }
   .title {
-    width: 102%;
+    width: 70px;
+    margin-left: -2px;
     line-height: 1.2em;
     height: 2.4em;
     overflow: hidden;
