--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -62,6 +62,7 @@ div.wysiwyg ul.toolbar {
       float: right; }
     #sidebar .home-icon .title {
       width: auto;
+      margin-left: 0px;
       padding: 2.5px 0 0 4px;
       text-align: left;
       height: auto;
@@ -107,10 +108,13 @@ div.wysiwyg ul.toolbar {
   display: none !important; }
 
 .home-icon.editing {
-  background: url(/images/ui/highlight.png) no-repeat 0px 1px !important; }
+  background: #a4bec6 no-repeat 0px 1px !important;
+  border-radius: 15px;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -khtml-border-radius: 15px; }
   .home-icon.editing .title {
-    color: #333333;
-    font-weight: bold; }
+    color: #333333; }
 
 .home-icon.invalid .invalid-icon {
   position: relative;
