--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -17,7 +17,10 @@ h1 = @company.name
     .left.lfloat
       .title Mobile Phone Emulator
       .title-subtext
-        em Drag a widget from the sidebar on the left into the emulator below to add it to your mobile website.
+        a target="ymhelp" href="http://help.yomobi.com/Account/MobileRedirectScript" 
+          img src="/images/redirect.png"
+        a target="ymhelp" href="http://help.yomobi.com/Account/MobileRedirectScript" Click here
+        |  to learn how to auto-redirect mobile visitors from your desktop site to your mobile site.
       .divider style="border-color:#E0E1E2;margin:0 10px 10px 0"
       #emulator-wrapper
         .loader-overlay
