Updated Advanced Settings page.

--- a/app/views/builder/index.slim
+++ b/app/views/builder/index.slim
@@ -17,7 +17,7 @@ h1 = @company.name
     .left.lfloat
       .title Mobile Phone Emulator
       .title-subtext
-        a target="ymhelp" href="http://help.yomobi.com/Account/MobileRedirectScript" 
+        a target="_blank" href="http://help.yomobi.com/Account/MobileRedirectScript" 
           img src="/images/redirect.png"
         a target="ymhelp" href="http://help.yomobi.com/Account/MobileRedirectScript" Click here
         |  to learn how to auto-redirect mobile visitors from your desktop site to your mobile site.
