Updated the redirect link on the help bubble in the Advanced Settings editor.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -277,7 +277,7 @@ script.edit-advanced-settings(type="text/template")
       .divider
 
       label class="help" Desktop Redirect Code:
-      a href="http://help.yomobi.com/Account/MobileRedirectScript" target="ymhelp"
+      a href="http://help.yomobi.com/Account/MobileRedirectScript#detailedinstructions" target="ymhelp"
         img.help-bubble src="/images/ui/help-bubble.png" title=t('builder.settings.help.redirect')
       textarea.read-only readonly="readonly" data-orig-val=desktop_redirect_code(@company) = desktop_redirect_code @company
 
