--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -146,7 +146,10 @@ div.wysiwyg ul.toolbar {
   padding: 0 0 10px 10px; }
   #builder .left > .title-subtext {
     font-weight: bold;
-    color: green; }
+    color: #6D3F3A;
+    background: #FEEFC0;
+    padding: 2px 4px 2px 8px;
+    margin: 0px 10px 1px 0px; }
     #builder .left > .title-subtext img {
       float: left;
       margin: 2px 6px 0 0; }
