--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -170,7 +170,10 @@ div.wysiwyg ul.toolbar {
     padding: 0 0 10px 10px; 
     & > .title-subtext {
       font-weight: bold;
-      color: green; 
+      color: #6D3F3A;
+      background: #FEEFC0;
+      padding: 2px 4px 2px 8px;
+      margin: 0px 10px 1px 0px;
       img { 
         float: left;
         margin: 2px 6px 0 0; 
