added old layout

--- a/app/views/shared/_footer-links.html.erb
+++ b/app/views/shared/_footer-links.html.erb
@@ -1,11 +1,7 @@
-<div class="footer-wrapper">
-  <div class="footer-text">
-    <a href="#" class="footerlink">About</a> ·
-    <a href="#" class="footerlink">Privacy</a> ·
-    <a href="#" class="footerlink">Terms</a> ·
-    <a href="#" class="footerlink">Feedback</a> ·
-    <a href="#" class="footerlink">Help</a><br />
-    All Right Reserved YoMobi © 2012
-  </div>
+<div class="site-links">
+  <a href="<%= about_path %>">About</a>    <span class="dot">&middot;</span>
+  <a href="<%= privacy_path %>">Privacy</a>  <span class="dot">&middot;</span>
+  <a href="<%= terms_path %>">Terms</a>    <span class="dot">&middot;</span>
+  <a href="mailto:feedback@yomobi.com">Feedback</a> <span class="dot">&middot;</span>
+  <a href="http://help.yomobi.com" target="_blank">Help</a>
 </div>
-
