--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,31 +10,57 @@ html lang="en-US"
 
     title YoMobi - Free Mobile Website Builder Platform
 
-    = stylesheet_link_tag 'main-app'
+    = stylesheet_link_tag 'signup-app'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.11.custom'
+    = yield :css
     = csrf_meta_tag
   body
     = topline_notice
-    .wrapper
-      .topheader
-        a href=root_path
-          .companylogo
-        a href=new_user_registration_path
-          .topsignup
-        - if current_user.nil? && @hide_header_signin_form != true
-          = render :partial => 'shared/header-signin-form'
-      = yield
-    = render 'shared/footer'
 
-    = javascript_include_tag 'support/underscore'
-    = javascript_include_tag 'support/jquery-1.6.2.min'
-    = javascript_include_tag 'support/jquery.tooltip.v.1.1'
-    = javascript_include_tag 'util', 'builder.util'
-    = javascript_include_tag 'notice'
-    = javascript_include_tag 'main'
-    = javascript_include_tag 'jcarousellite'
+    #global-container
+
+      #header class=(user_signed_in? ? 'signed-in' : 'signed-out')
+        .content
+          a#logo href=root_path
+            img src="/images/yomobi-logo-#{user_signed_in? ? 20 : 32}.png"
+
+          - if current_user.nil? && @hide_header_signin_form != true
+            = render :partial => 'shared/header-signin-form'
+          = render :partial => 'shared/nav'
+          .clearfix
+      - if @landing_bar
+        .landing-bar
+          .content
+            ul.menu-bar
+              li
+                div.menu-item
+                  a href=about_path About Us
+              li
+                div.menu-item
+                  a href="mailto:feedback@yomobi.com" Feedback
+              li
+                div.menu-item
+                  a target="ym-help" href=help_url Help 
+            .clearfix
+      - unless user_signed_in? || @hide_signup_bar
+        .signup-bar
+          .content
+            a.pretty-button href="/" Sign Up
+            .description = t 'signup_bar'
+            .clearfix
+      #page-container-wrapper class=@page_wrapper_class
+        #page-container
+          #sidebar
+            = yield :sidebar
+          #content
+            = yield
+          .clearfix
+        .clearfix
+      = render 'shared/footer'
+
+    = render 'layouts/js-base'
     = yield :js
+    = javascript_include_tag 'notice'
 
     - if Rails.env.production?
       = javascript_include_tag 'google-analytics'
-
