--- a/app/views/shared/_footer.slim
+++ b/app/views/shared/_footer.slim
@@ -1,3 +1,5 @@
-#footer-main
+#footer
   = render 'shared/footer-links'
-
+  .copyright YoMobi &copy; 2011
+  = render 'builder/social-share'
+  .clearfix
