--- a/app/views/home/_image-slider.slim
+++ b/app/views/home/_image-slider.slim
@@ -4,7 +4,7 @@
       .slider-text
         .content-heading2
           span.blue-text Welcome to
-        img.yomobi-com src="images/new_design/yomobi-com.jpg"
+        img.yomobi-com src="images/yomobi-logo-32-blue.png"
         .content-text2 Reach more people with a mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in 4 minutes
         img.read-more src="images/new_design/read-more.jpg"
       img.slider-image src="images/new_design/iphone-img4.jpg"
