--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -19,7 +19,7 @@ body {
 .menulink {
 	color:#FFFFFF;
 	text-transform:uppercase;
-	font-size:18px;
+	font-size:16px;
 	text-decoration:none;
 	line-height:32px;
 	padding-top:6px;
@@ -32,12 +32,12 @@ body {
 .menulink:hover {
 	color:#FFFFFF;
 	text-transform:uppercase;
-	font-size:18px;
+	font-size:16px;
 	text-decoration:none;
 	line-height:32px;
 	padding-top:6px;
 	padding-bottom:6px;
-	margin-left:10px;
+/*	margin-left:10px;*/
 	padding-left:15px;
 	padding-right:15px;
 	text-shadow:1px 1px 1px #1c1c1c;
@@ -174,7 +174,7 @@ body {
 .social-icon {
 	float:right;
 	margin-top:20px;
-	width:46px;
+	width:50px;
 }
 .main-whitebg {
 	float:left;
