--- a/app/views/home/_image-slider.slim
+++ b/app/views/home/_image-slider.slim
@@ -7,6 +7,8 @@
         img.yomobi-com src="images/yomobi-logo-32-blue.png"
         .content-text2 Reach more people with a mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in 4 minutes
         img.read-more src="images/new_design/read-more.jpg"
-      img.slider-image src="images/new_design/iphone-img4.jpg"
+      
+      erb:
+        <iframe width="435" height="255" style="margin-top:20px"src="http://player.vimeo.com/video/36200802?title=0&amp;byline=0&amp;portrait=0" frameborder="0"      webkitAllowFullScreen mozallowfullscreen allowfullscreen ></iframe>	
    
 
