adjust layout according to client request

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,13 +10,9 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
       li.menu-li
         a.menulink href=about_path About
       li.menu-li
-        a.menulink href=privacy_path Privacy
-      li.menu-li
-        a.menulink href=terms_path Terms
-      li.menu-li
         a.menulink href="mailto:feedback@yomobi.com" Feedback
       li.menu-li
-        a.menulink href="http://help.yomobi.com" Help
+        a.menulink target="_blank" href="http://help.yomobi.com" Help
 
     = render :partial => 'builder/social-share-new'
 
