add social links

--- a/app/views/builder/_social-share-new.slim
+++ b/app/views/builder/_social-share-new.slim
@@ -1,19 +1,19 @@
 .social-icon
-  a href="#"
+  a href="mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi."
     img src="images/new_design/gmail.jpg" border="0"
 .social-icon
-  a href="#"
+  a href="https://plus.google.com/share?url=http://www.yomobi.com&content=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi."
     img src="images/new_design/google.jpg" border="0"
 .social-icon
-  a href="#"
+  a href="http://www.stumbleupon.com/submit?url=http://www.yomobi.com&title=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi."
     img src="images/new_design/stumble.jpg" border="0"
 .social-icon
-  a href="#"
+  a href="http://tinyurl.com/6nxmy3r"
     img src="images/new_design/linkdin.jpg" border="0"
 .social-icon
-  a href="#"
+  a href="http://twitter.com/youmobilized"
     img src="images/new_design/twitter.jpg" border="0"
 .social-icon
-  a href="#"
+  a href="http://facebook.com/yomobi"
     img src="images/new_design/facebook.jpg" border="0"
 
