--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -379,3 +379,48 @@ label.help {
 
 .hide {
   display: none; }
+
+/********************************************/
+/* CSS for Pages                            */
+/********************************************/
+#webesity table, #webesity td, #webesity th {
+  border: 0px;
+  border-collapse: collapse;
+  padding: 10px; }
+#webesity .left {
+  float: left; }
+#webesity .word {
+  font-size: 3em;
+  color: red;
+  font-weight: bold;
+  margin: 0 10px 10px 0; }
+#webesity .type, #webesity .pronunciation, #webesity .definition {
+  font-weight: bold; }
+#webesity .pronunciation {
+  margin-top: 4px; }
+#webesity .definition, #webesity .use {
+  margin: 0 30px; }
+#webesity img {
+  height: 100%; }
+#webesity .entry {
+  background: #E8ECF5; }
+#webesity td.img {
+  vertical-align: top;
+  width: 50%; }
+#webesity .marketing p {
+  margin-bottom: 10px; }
+
+/**********************/
+#why_mobile #container {
+  width: 1000px;
+  height: 500px;
+  border: 0px;
+  overflow: hidden;
+  margin: auto; }
+#why_mobile #container iframe {
+  width: 1000px;
+  height: 1000px;
+  margin-left: -20px;
+  margin-top: -150px;
+  margin-right: -90px;
+  border: 0; }
