--- a/app/views/shared/_data-loader.html.erb
+++ b/app/views/shared/_data-loader.html.erb
@@ -45,7 +45,7 @@ window.g = {
   noPhotoPath: '/images/no-wphoto.png',
   isPreview: <%= @is_preview_mode.present? %>,
   isBuilder: <%= @is_builder.present? %>,
-  isTablet: navigator.userAgent.match(/ipad|kindle/i) != null
+  isTablet: /<%= tablet_devices %>/i.test( navigator.userAgent.toLowerCase() )
 };
 window.widgetClasses = {};
 window.widgetPages = {};
