--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,6 +10,10 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
       li.menu-li
         a.menulink href=about_path About
       li.menu-li
+        a.menulink href="why-mobile" Mobile Matters
+      li.menu-li
+        a.menulink href="webesity" Webesity
+      li.menu-li
         a.menulink href="mailto:feedback@yomobi.com" Feedback
       li.menu-li
         a.menulink target="_blank" href="http://help.yomobi.com" Help
