--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -14,7 +14,7 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
       li.menu-li
         a.menulink href="webesity" Webesity
       li.menu-li
-        a.menulink href="mailto:feedback@yomobi.com" Feedback
+        a.menulink href="mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi." Feedback
       li.menu-li
         a.menulink target="_blank" href="http://help.yomobi.com" Help
 
