--- a/app/views/shared/_footer-links_new.html.erb
+++ b/app/views/shared/_footer-links_new.html.erb
@@ -1,10 +1,10 @@
 <div class="footer-wrapper">
   <div class="footer-text">
-    <a href="#" class="footerlink">About</a> ·
-    <a href="#" class="footerlink">Privacy</a> ·
-    <a href="#" class="footerlink">Terms</a> ·
-    <a href="#" class="footerlink">Feedback</a> ·
-    <a href="#" class="footerlink">Help</a><br />
+    <a href="about" class="footerlink">About</a> ·
+    <a href="privacy" class="footerlink">Privacy</a> ·
+    <a href="terms" class="footerlink">Terms</a> ·
+    <a href="mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi." class="footerlink">Feedback</a> ·
+    <a href="http://help.yomobi.com" class="footerlink">Help</a><br />
     All Right Reserved YoMobi © 2012
   </div>
 </div>
