--- a/app/views/builder/_social-share-new.slim
+++ b/app/views/builder/_social-share-new.slim
@@ -1,4 +1,4 @@
-.social-gmail onclick="document.location = 'mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi.'" 
+.social-gmail onclick="document.location = 'mailto:?subject=%20Get%20mobilized%20with%20YoMobi.&body=Build%20your%20own%20free%20mobile%20site%20at%20http%3A%2F%2Fwww.yomobi.com.'" 
     
 .social-google onclick="window.open('https://plus.google.com/share?url=http://www.yomobi.com&content=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi.')"
     
