--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,13 +10,13 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
       li.menu-li
         a.menulink href=about_path About
       li.menu-li
-        a.menulink href="why-mobile" Mobile Matters
+        a.menulink href=why_mobile_path Mobile Matters
       li.menu-li
-        a.menulink href="webesity" Webesity
+        a.menulink href=webesity_path Webesity
       li.menu-li
-        a.menulink href="mailto:feedback@yomobi.com?subject=%20Get%20mobilized%20with%20YoMobi.&body=The%20world%20is%20on%20the%20go.%20Get%20mobilized%20with%20YoMobi." Feedback
+        a.menulink target="ym" href=vote_path Vote
       li.menu-li
-        a.menulink target="_blank" href="http://help.yomobi.com" Help
+        a.menulink target="ym" href="http://help.yomobi.com" Help
 
     = render :partial => 'builder/social-share-new'
 
