--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -401,12 +401,13 @@ label.help {
 #webesity .definition, #webesity .use {
   margin: 0 30px; }
 #webesity img {
-  height: 100%; }
+  height: 100%;
+  margin-left: 30px; }
 #webesity .entry {
   background: #E8ECF5; }
 #webesity td.img {
   vertical-align: top;
-  width: 50%; }
+  width: 40%; }
 #webesity .marketing p {
   margin-bottom: 10px; }
 
