Updated index page list of features

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -38,8 +38,8 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
     .content-list
       strong.blue-text Features include
       ul.content-ul
-        li No sign up costs
-        li Free hosting
+        li Completely Free Mobile Sites
+        li Free Hosting
         li One-click calling
         li Interactive maps
         li Social media integration
