--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -34,12 +34,12 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
       span.blue-text Get mobilized!
     .content-image
       img src="images/new_design/iphone.png"
-    .content-text Reach more people with a mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in 4 minutes.
+    .content-text Reach more people with a mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.
     .content-list
       strong.blue-text Features include
       ul.content-ul
         li Completely Free Mobile Sites
-        li Free Hosting
+        li Free Hosting & Mobile URL
         li One-click calling
         li Interactive maps
         li Social media integration
