Updated why_mobile and some css.

--- a/app/views/home/why_mobile.html
+++ b/app/views/home/why_mobile.html
@@ -1,6 +1,16 @@
 
 <div id="why_mobile" class="yomobi-info-page">
 
+<h1>Having a mobile-optimized site is important.<h1>
+<h2>When you don't have a mobile site:</h2>
+<ul>
+<li><span class="hilite">You frustrate existing customers and lose revenue.</span></li>
+<li><span class="hilite">You new customer reach shrinks</span> because more people browse the web on their phones.</li>
+<li><span class="hilite">40% of your mobile vistors will turn to your competitor</span> after a bad mobile experience.</li>
+<li><span class="hilite">57% of your customers won't recommend you</span> if you have a bad mobile site.</li>
+</ul>
+<br/>
+<hr/>
 <div id="container">
 <iframe src="http://www.howtogomo.com/en/d/why-go-mo/#reasons-mobile-matters" scrolling="no"></iframe>
 </div>
