--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -417,7 +417,7 @@ label.help { padding-bottom: 4px; }
 
 
 /********************************************/
-/* CSS for Pages                            */
+/* CSS for home & landing pages                       
 /********************************************/
 
 #webesity {
@@ -450,13 +450,15 @@ label.help { padding-bottom: 4px; }
 /**********************/
 
 #why_mobile {
-  #container{
+
+  #container {
     width:1000px;
     height:500px;
     border:0px; 
     overflow:hidden;
     margin:auto;
   }
+
   #container iframe {
     width:1000px;
     height:600px;
@@ -465,6 +467,10 @@ label.help { padding-bottom: 4px; }
     margin-right:-90px;  
     border:0;
   }
+  
+  h1 { padding-left: 0px !important; }
+  .hilite { font-weight: bold; color: red; }
+  li { font-size: 14px; font-weight: bold; }
 }
 
 
