--- a/app/views/home/_image-slider.slim
+++ b/app/views/home/_image-slider.slim
@@ -3,9 +3,8 @@
     li
       .slider-text
         .content-heading2
-          span.blue-text Welcome to
-        img.yomobi-com src="images/yomobi-logo-32-blue.png"
-        .content-text2 Reach more people with a <span class="free">FREE</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.
+          span.blue-text Welcome to YoMobi
+        .content-text2 Reach more people with a <span class="hilite">free</span> mobile website. YoMobi makes building a mobile site easy. Go from sign up to online in minutes.<br/><br/> Being mobile is more important than ever.
         img.read-more src="images/new_design/see-mobile-matter.png" onclick="document.location='why-mobile'" style="cursor:pointer;margin-left:10px;"
       
       erb:
